2006-06-08  Jackson Harper  <jackson@ximian.com>

	* OpenTreeNodeEnumerator.cs: Fix to use the Parent property, so
	that the treeview and root node checks are done also, this fixes a
	regression i caused in the unit tests.

2006-06-07  Wade Berrier <wberrier@novell.com> 

	* RichTextBox.cs: More ISO8859-1 -> unicode

2006-06-07  Mike Kestner  <mkestner@novell.com>

	* ComboBox.cs : use items to hold highlight/selection so that
	collection insertions don't require synchronization.

2006-06-07  Jackson Harper  <jackson@ximian.com>

	* InternalWindowManager.cs: Simplify (and FIX) the window sizing
	routine.  We now always keep the sized edge at the cursor instead
	of computing movement and adjusting rects.  There is one buglet
	with this method though when the cursor is moved over area that
	the window can not expand too (such as the toolbars on the desktop).

2006-06-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XplatUIX11.cs: (IsEnabled,IsVisible) the window handler can be null
	here. Fixes crash on startup in AlbumSurfer.

2006-06-07  Peter Dennis Bartok  <pbartok@novell.com> 

	* RichTextBox.cs: Replaced embedded ISO8859-1 chars with proper unicode
	  values

2006-06-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XplatUIX11.cs: call XPending and XNextEvent inside the same lock()
	statement to avoid calling XNextEvent which will block if another thread
	took the event that we were expecting. Fixes bug #78605.

2006-06-07  Mike Kestner  <mkestner@novell.com>

	* ListView.cs : isolated checkbox clicking from the selection logic.
	Toggle check state on item doubleclicks.  Really fixes #78454 part2.

2006-06-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Form.cs: Check that the value passed to Form.DialogResult
	is a valid enum value.

2006-06-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FileDialog.cs: disable the up button when in 'Recently Used' or 'My
	Computer'. Clicking it in the network view goes to 'My Computer'.